--- a/MechApp/package.json
+++ b/MechApp/package.json
@@ -25,6 +25,7 @@
   "author": "AutoCare Developer",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0"
